# tap-marketo

./: .gitignore  README.md  pyproject.toml
tap_marketo/: __init__.py  auth.py  client.py  exceptions.py  streams.py  tap.py
tap_marketo/tests/: __init__.py  test_core.py
